--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ button {
   margin-right: 40px;
 }
 .header-link-item {
+  position: relative;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -137,12 +138,33 @@ button {
 .contacts {
   font-style: normal;
 }
+.current {
+  color: var(--primary-link-color);
+}
+.current::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--primary-link-color);
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+}
 /*--------------------MAIN--------------------*/
 .main-cap {
-  background-color: var(--primary-color);
-
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/people-office1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: var(--primary-color);
 }
 .main-container {
   display: block;
@@ -204,6 +226,7 @@ button {
   letter-spacing: 0.025em;
   color: var(--primary-color);
   margin-bottom: 8px;
+  margin-top: 8px;
 }
 .feature-title-text {
   font-size: 16px;
@@ -211,6 +234,15 @@ button {
   letter-spacing: 0.02em;
   color: var(--secondary-color);
 }
+.feature-content-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  border-radius: 4px;
+  background: var(--secondary-link-color);
+}
+
 /*--------------------BOX--------------------*/
 .box {
   padding-bottom: 120px;
@@ -276,11 +308,73 @@ button {
   letter-spacing: 0.02em;
   color: var(--secondary-color);
   text-align: center;
+  margin-bottom: 20px;
 }
 .content {
   padding: 32px 0;
+  border-radius: 0px 0px 4px 4px;
+  background: var(--accent-secondary-color);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+.team-soc-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 24px;
+}
+.team-soc-items {
+  width: 40px;
+  height: 40px;
+}
+.team-soc-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--accent-color);
+  color: var(--secondary-link-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/*--------------------CUSTOMERS--------------------*/
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.client-title {
+  color: var(--primary-color);
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  margin-bottom: 72px;
+}
+.client-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client-link {
+  width: 168px;
+  height: 88px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
 
+  color: #8e8f99;
+  background-color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /*--------------------FOOTER--------------------*/
 .footer {
   background-color: var(--primary-color);
@@ -309,7 +403,43 @@ button {
 .footer-accent {
   color: var(--secondary-link-color);
 }
-
+.footer-title {
+  color: var(--accent-secondary-color);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.15;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+.footer-soc-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 24px;
+}
+.footer-soc-items {
+  width: 40px;
+  height: 40px;
+}
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--accent-color);
+  color: var(--secondary-link-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-soc-box {
+  display: flex;
+  align-items: start;
+}
+.footer-box {
+  margin-right: 120px;
+}
 /*--------------------PORTFOLIO--------------------*/
 .portfolio {
   padding: 96px 0 120px 0;
@@ -378,4 +508,46 @@ button {
   padding: 32px 16px;
   border: 1px solid var(--border-color);
   border-top: none;
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(67, 60, 60, 0.479);
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1) rotate(0);
+  border-radius: 50%;
+  width: 528px;
+  min-height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms linear, transform 250ms linear;
+  padding: 40px;
+}
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+  border: 1px solid #0000001a;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
