--- a/css/styles.css
+++ b/css/styles.css
@@ -369,12 +369,26 @@ button {
   align-items: center;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-
   color: #8e8f99;
   background-color: #ffffff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.client-link:hover,
+.client-link:focus {
+  color: var(--primary-link-color);
+}
+.client-link:hover {
+  border-color: var(--primary-link-color);
+}
+.client-icons {
+  fill: currentColor;
+}
+.client-icons:hover,
+.client-icons:focus {
+  fill: var(--primary-link-color);
+}
+
 /*--------------------FOOTER--------------------*/
 .footer {
   background-color: var(--primary-color);
@@ -508,6 +522,27 @@ button {
   padding: 32px 16px;
   border: 1px solid var(--border-color);
   border-top: none;
+}
+.portfolio-project-item:hover .portfolio-cover-text {
+  transform: translateY(0);
+}
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-cover-text {
+  position: absolute;
+  top: 0;
+  color: var(--secondary-link-color);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  background: var(--accent-color);
+  height: 100%;
+  padding: 40px 32px 164px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop {
   position: fixed;
