--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,9 @@ button {
 }
 .header {
   border-bottom: 1px solid var(--border-color);
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -111,6 +114,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--primary-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link-item:hover,
 .header-link-item:focus {
@@ -130,6 +134,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contacts-text:hover,
 .header-contacts-text:focus {
@@ -154,6 +159,7 @@ button {
 }
 /*--------------------MAIN--------------------*/
 .main-cap {
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
   background-image: linear-gradient(
@@ -190,6 +196,7 @@ button {
   margin: 0px auto;
   min-width: 169px;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-btn:hover,
 .main-btn:focus {
@@ -240,6 +247,7 @@ button {
   align-items: center;
   height: 112px;
   border-radius: 4px;
+
   background: var(--secondary-link-color);
 }
 
@@ -327,6 +335,7 @@ button {
 .team-soc-items {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-soc-link {
   width: 100%;
@@ -339,6 +348,13 @@ button {
   color: var(--secondary-link-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: var(--primary-link-color);
+}
+.team-soc-icons {
+  fill: var(--secondary-link-color);
 }
 /*--------------------CUSTOMERS--------------------*/
 .customers {
@@ -357,7 +373,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 24px;
+  gap: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -371,8 +387,6 @@ button {
   border-radius: 4px;
   color: #8e8f99;
   background-color: #ffffff;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
 .client-link:focus {
@@ -388,7 +402,10 @@ button {
 .client-icons:focus {
   fill: var(--primary-link-color);
 }
-
+.client-items {
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /*--------------------FOOTER--------------------*/
 .footer {
   background-color: var(--primary-color);
@@ -421,7 +438,7 @@ button {
   color: var(--accent-secondary-color);
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.32px;
   margin-bottom: 16px;
 }
@@ -429,7 +446,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 24px;
+  column-gap: 16px;
 }
 .footer-soc-items {
   width: 40px;
@@ -449,10 +466,17 @@ button {
 }
 .footer-soc-box {
   display: flex;
-  align-items: start;
+  align-items: baseline;
 }
 .footer-box {
   margin-right: 120px;
+}
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: #31d0aa;
+}
+.footer-soc-icons {
+  fill: var(--secondary-link-color);
 }
 /*--------------------PORTFOLIO--------------------*/
 .portfolio {
@@ -469,6 +493,8 @@ button {
 .portfolio-btn:hover,
 .portfolio-btn:focus {
   border: 1px solid transparent;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 .portfolio-list {
   display: flex;
@@ -479,6 +505,12 @@ button {
 
 .portfolio-link:not(:last-child) {
   margin-right: 24px;
+}
+.portfolio-link {
+  color: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -517,14 +549,21 @@ button {
 }
 .portfolio-project-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-content {
   padding: 32px 16px;
   border: 1px solid var(--border-color);
   border-top: none;
 }
-.portfolio-project-item:hover .portfolio-cover-text {
+.portfolio-project-item:hover .portfolio-cover-text,
+.portfolio-project-item:focus .portfolio-cover-text {
   transform: translateY(0);
+}
+.portfolio-project-item:hover,
+.portfolio-project-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-thumb {
   position: relative;
@@ -537,10 +576,11 @@ button {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
   background: var(--accent-color);
   height: 100%;
-  padding: 40px 32px 164px 32px;
+  width: 100%;
+  padding: 40px 32px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
