--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ button {
   align-items: center;
   height: 112px;
   border-radius: 4px;
-
+  margin-bottom: 8px;
   background: var(--secondary-link-color);
 }
 
@@ -392,7 +392,8 @@ button {
 .client-link:focus {
   color: var(--primary-link-color);
 }
-.client-link:hover {
+.client-link:hover,
+.client-link:focus {
   border-color: var(--primary-link-color);
 }
 .client-icons {
@@ -402,7 +403,7 @@ button {
 .client-icons:focus {
   fill: var(--primary-link-color);
 }
-.client-items {
+.client-link {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -446,11 +447,12 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 16px;
+  gap: 16px;
 }
 .footer-soc-items {
   width: 40px;
   height: 40px;
+  transform: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-link {
   width: 100%;
