--- a/css/styles.css
+++ b/css/styles.css
@@ -463,8 +463,6 @@ button {
   align-items: center;
   background-color: var(--accent-color);
   color: var(--secondary-link-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-box {
   display: flex;
@@ -592,8 +590,9 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(67, 60, 60, 0.479);
-  transition: opacity 250ms linear, visibility 250ms linear;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
@@ -601,27 +600,40 @@ button {
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
   border-radius: 50%;
-  width: 528px;
-  min-height: 581px;
-  background: #ffffff;
+  width: 408px;
+  min-height: 584px;
+  background: #fcfcfc;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform 250ms linear, transform 250ms linear;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
 }
 .modal-close {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 24px;
+  right: 24px;
   width: 24px;
   height: 24px;
-  background-color: transparent;
   border: 1px solid #0000001a;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #e7e9fc;
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close:hover,
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+}
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden {
   visibility: hidden;
