--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 24px;
+  gap: 24px;
 }
 .team-soc-items {
   width: 40px;
@@ -355,6 +355,7 @@ button {
 }
 .team-soc-icons {
   fill: var(--secondary-link-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*--------------------CUSTOMERS--------------------*/
 .customers {
@@ -463,6 +464,7 @@ button {
   align-items: center;
   background-color: var(--accent-color);
   color: var(--secondary-link-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-box {
   display: flex;
