--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ button {
   border-radius: 2px;
   background-color: var(--primary-link-color);
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
 }
 /*--------------------MAIN--------------------*/
